# plotmm30

./: README.md  gtkmm-3.0_notes  meson.build  meson_options.txt  org.gnome.plotmm30.json
build-aux/meson/: postinstall.py
demo/: main.cc  meson.build
doc/: Doxyfile.in  meson.build
doc/doxygen/: mainpage.dox  meson.build  plotmm30.doxygen.in
include/: compat.h  curve.h  doubleintmap.h  errorcurve.h  meson.build  paint.h  plot.h  plotmm.h  point.h  rect.h  rectangle.h  scale.h  scalediv.h  size.h  supplemental.h  symbol.h
src/: curve.cc  doubleintmap.cc  errorcurve.cc  meson.build  paint.cc  plot.cc  rect.cc  scale.cc  scalediv.cc  supplemental.cc
