pkg_mod = import('pkgconfig')

plotmm_sources = files(
  'curve.cc',
  'doubleintmap.cc',
  'doublerect.cc',
  'rect.cc',
  'errorcurve.cc',
  'paint.cc',
  'plot.cc',
  'scale.cc',
  'scalediv.cc',
  'supplemental.cc',
  'symbol.cc'
)

# plotmm_sources += gnome.compile_resources('plotmm30-resources',
#  'plotmm30.gresource.xml'
#  c_name: 'plotmm'
#)
headers = ['.', '../include']
